<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".OrderRating">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10"
        android:padding="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="50dp"
            app:srcCompat="@drawable/rating"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratebar"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"/>

        <TextView
            android:id="@+id/rateNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RATING:"
            android:textSize="30dp"
            android:textColor="@color/bgColorNight"
            android:textStyle="italic"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/feedbacker"
            android:layout_weight="1"
            android:hint="Type in your feedback to us"
            />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bgColorNight"
            android:textColor="@color/cardview_light_background"
            android:layout_marginTop="30dp"
            android:text="Send"/>

    </LinearLayout>

</ScrollView>